# las-digital-models

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.pdal  Jenkinsfile  MNS_HYDRO.vrt  Makefile  README.md  VERSION.md  create_conda_env.sh  environment.yml  example_run_dsm.sh  example_run_dtm.sh  gf_main.py  gf_processing.py  ip_main.py  ip_processing.py  las_clip.py  las_ground.py  las_merge.py  las_prepare.py  produits_derives_lidar.sh  pyproject.toml  raster_clip.py  run.sh  run_tests.sh
configs/: config.yaml  test.yaml
docker/: Dockerfile  build.sh  deploy-jenkins.sh  deploy.sh  run.sh  run_filter.sh  run_gf.sh  run_ip.sh
lidar_prod/: gf_main.py  gf_multiprocessing.py  gf_one_tile.py  gf_processing.py  ip_main.py  ip_multiprocessing.py  ip_one_tile.py  ip_processing.py  produits_derives_lidar.sh  run.sh
produit_derive_lidar/: add_buffer_multiprocessing.py  add_buffer_one_tile.py  dhm_multiprocesing.py  dhm_multiprocessing.py  dhm_one_tile.py  filter_multiprocessing.py  filter_one_tile.py  ip_multiprocessing.py  ip_one_tile.py  version.py
produits_derives_lidar/: add_buffer_one_tile.py  dhm_one_tile.py  extract_min_z_from_dsm_one_tile.py  ip_one_tile.py  ip_one_tile_raster.py
setup_env/: environment.yml  requirements.yml  setup_env.sh  setup_self_hosted.sh
test/: test_add_buffer_multiprocessing.py  test_add_buffer_one_tile.py  test_dhm_multiprocessing.py  test_dhm_one_tile.py  test_extract_min_z_from_dsm_one_tile.py  test_filter_multiprocessing.py  test_filter_one_tile.py  test_gf_multiprocessing.py  (+5 more)
(+134 files in other folders)
