[project]
name = "ign-mnx"
dynamic = ["version"]

description = "Library for creation of DEM, DSM and DTM from lidar point cloud"
readme = "README.md"
authors = [
    { name = "Malvina Dupays", email = "malvina.dupays@ign.fr" },
    { name = "Léa Vauchier", email = "lea.vauchier@ign.fr" }
]
[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "produit_derive_lidar.version.__version__"}

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.bat
  | data
)/
'''

[tool.isort]
profile = "black"
